# TOE-Flux-Capacitor-

./: .gitignore  CONTRIBUTING.md  HARDWARE.md  MANIFEST.in  MANUSCRIPT.md  README.md  pyproject.toml  requirements.txt
src/: main.py
src/sphinx_os/: __init__.py  anubis_core.py  arduino_interface.py  constants.py  entanglement_cache.py  flux_capacitor.ino  harmonic_generator.py  plotting.py  qubit_fabric.py  sandbox.py  unified_toe.py
src/sphinx_os/audio/: oam_audio_modulator.py
src/sphinx_os/constants/: __init__.py  config.py  physical.py
src/sphinx_os/core/: __init__.py  shor.py  sphinx_os.py
src/sphinx_os/interface/: gui.py
src/sphinx_os/physics/: __init__.py  lattice.py  spin_network.py
src/sphinx_os/physics/fields/: __init__.py  fermion.py  gauge.py  graviton.py  higgs.py  nugget.py
src/sphinx_os/physics/geometry/: __init__.py  curvature.py  metric.py  stress_energy.py
src/sphinx_os/quantum/: ctc_lattice_model.py  ctc_lattice_toe_model.py  ctc_lattice_unified_model.py  holographic_ctc_j6_model.py  non_local_qaoa.py  non_local_qml.py  quantum_sensing_model.py  temporal_displacement_test.py  zpe_extraction_model.py
src/sphinx_os/utils/: __init__.py  entropy.py  math_utils.py
src/sphinx_os/visualization/: visualize.py
tests/: __init__.py  test_ctc.py  test_ctc_tuning.py  test_entanglement.py  test_geometry.py  test_harmonics.py  test_j6_validation.py  test_mabk.py  test_scalar_field.py  test_three_body.py
